kubernetes/namespaces-with-rc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-db

---

apiVersion: v1
kind: Namespace
metadata:
  name: user-apps

---

apiVersion: v1
kind: Namespace
metadata:
  name: admin-apps
