kubernetes/ns_rc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database

---

apiVersion: v1
kind: Namespace
metadata:
  name: admin

---

apiVersion: v1
kind: Namespace
metadata:
  name: user
