kubernetes/pod_nexus_test.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: my-first-app
    labels:
      type: front-end
  spec:
    containers:
      - name: nginx
        image: nexus_machine_ip/nginx
